[package]
name = "hxgm30-eco"
description = "Ecological simulation, biomes, land cover, elevation, and climate statistics for generated worlds"
readme = "README.md"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <duncan@cnbb.games>"]
repository = "https://github.com/hexagram30/eco"
documentation = "https://docs.rs/hxgm30-eco/"
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2018"

[lib]
name = "hxgm30eco"

[dependencies]
image = "0.23.4"
image-data = "0.2.0"
libmath = "0.2.1"
log = "0.4.8"
rand = "0.7"
rand_distr = "0.2.2"
rand_pcg = "0.2.1"
ron = "0.5.1"
serde = { version = "1", features = ["serde_derive"] }
twyg = "0.1.7"
